--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 .DS_Store
 node_modules
-.idea/.name
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/testem_jasmine.iml
-.idea/vcs.xml
-.idea/workspace.xml
+output
+.idea/**
